crates/deps-lsp/src/document/snapshots/deps_lsp__document__osv_snapshot_tests__gradle_vulnerable_diagnostic.snap
---
source: crates/deps-lsp/src/document/osv_snapshot_tests.rs
assertion_line: 169
expression: rendered
---
Some(Warning) | GHSA-xxxx-yyyy-zzzz: Example vulnerability for snapshot testing | code=true
Some(Information) | +5 more advisories | code=false
Some(Warning) | Unknown package 'org.apache.logging.log4j:log4j-core' | code=false
