crates/deps-lsp/src/document/snapshots/deps_lsp__document__osv_snapshot_tests__nuget_vulnerable_diagnostic.snap
---
source: crates/deps-lsp/src/document/osv_snapshot_tests.rs
assertion_line: 193
expression: rendered
---
Some(Warning) | GHSA-xxxx-yyyy-zzzz: Example vulnerability for snapshot testing | code=true
Some(Information) | +5 more advisories | code=false
Some(Warning) | Unknown package 'Newtonsoft.Json' | code=false
